# misdocs

./: .gitignore  404.html  index.html  main.py  mkdocs.yml  pyproject.toml
Fonetica/Letras_y_sonidos/: index.html
docs/: index.md
docs/Fonetica/: Letras_y_sonidos.md
docs/guias rapidas/: uv.md  wsl.md
docs/ingles/: articulos.md  entrevista.md  sonidos.md  survival_kit_for_foreigners.md  survival_kit_for_talkingAboutOthers.md  terminaciones.md
docs/ingles/Tecnicas/: comunicacion_sobre_perfeccion.md
docs/mkdocs/: actualizacion_continua.md  index.md
docs/protocolos/mcp/: PruebaConexionQwen.md  index.md
docs/python/: 09_listas.md
guias rapidas/uv/: index.html
guias rapidas/wsl/: index.html
ingles/Tecnicas/comunicacion_sobre_perfeccion/: index.html
ingles/articulos/: index.html
ingles/entrevista/: index.html
ingles/sonidos/: index.html
ingles/survival_kit_for_foreigners/: index.html
ingles/survival_kit_for_talkingAboutOthers/: index.html
ingles/terminaciones/: index.html
mkdocs/: index.html
mkdocs/actualizacion_continua/: index.html
protocolos/mcp/: index.html
protocolos/mcp/PruebaConexionQwen/: index.html
python/09_listas/: index.html
search/: search_index.json
site/: index.html
site/search/: search_index.json
